# duckdb-iceberg-demo

./: .gitignore  README.md  pyproject.toml
duck_iceberg_demo/: duck_iceberg_demo.ipynb  local_duck_cloud_aws_iceberg_demo.ipynb  local_duck_cloud_iceberg_demo.ipynb
duck_iceberg_demo/deploy_duckdb/: README.md  build_cloud_run.sh  config.py  main.py
duck_iceberg_demo/deploy_duckdb_aws/: Dockerfile  README.md  config.py  main.py  requirements.txt  test.ipynb
duck_iceberg_demo/deploy_duckdb_gcp/: README.md  config.py  main.py  requirements.txt
