[tool.poetry]
name = "duck-iceberg-demo"
version = "0.1.0"
description = ""
authors = ["Steven Wang <steven@luabase.com>"]
readme = "README.md"
packages = [{include = "duck_iceberg_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.0.0"
pyiceberg = "^0.6.1"
sqlalchemy = "^2.0.31"
pyarrow = "^16.1.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
